Make .oc source separately configurable

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,8 @@
 OBLIVCPATH=../obliv-c
 UTIL=$(OBLIVCPATH)/test/oblivc/common/util.c
 NAME=add
+SUBNAME=add_fourth
 CFLAGS=-DREMOTE_HOST=localhost -O3
 
-./a.out: $(NAME).oc $(NAME).c $(UTIL) $(OBLIVCPATH)/_build/libobliv.a
-	$(OBLIVCPATH)/bin/oblivcc $(CFLAGS) -I . $(NAME).oc $(NAME).c $(UTIL)
+./a.out: $(SUBNAME).oc $(NAME).c $(UTIL) $(OBLIVCPATH)/_build/libobliv.a
+	$(OBLIVCPATH)/bin/oblivcc $(CFLAGS) -I . $(SUBNAME).oc $(NAME).c $(UTIL)
